fixed spacing of list items

--- a/src/components/StarList/StarList.css
+++ b/src/components/StarList/StarList.css
@@ -4,3 +4,7 @@
   text-align: left;
   margin-left: 5rem;
 }
+
+li {
+  margin-top: 10px;
+}
